# llm-judge-mvp

./: .coverage  .dockerignore  .env.example  .gitignore  .trivyignore  Dockerfile  Makefile  PCT1_README.md  PCT_FULL_README.md  README.md  README_MilestoneA.txt  VALIDATION_README.md  VISION.md  apply_l2_ensemble.sh  cs_validation_scored.jsonl  docker-compose.yaml  epic_updates_l2_ensemble.yaml  epics.yaml  epics_v2.yaml  exp32_slm_comparison.py  exp33_optimized_extraction.py  exp34_cyclic_extraction.py  exp35_five_graph.py  exp36_rag_five_graph.py  hallucination_pipeline_config.yaml  project_state_05Mar2026_0930.md  pyproject.toml  pytest.ini  sweep_rag_fixed.py
.github/ISSUE_TEMPLATE/: bug.yml  epic.md  epic.yml  platform labels.md  task.md  task.yml
.github/workflows/: auto-status.yml  ci-quality-gate.yml  ci-quality-gate.yml:Zone.Identifier  ci-unified.yml  ci.yml  docker-ci.yml  nightly-evaluation.yml  nightly.yml  release-image.yml  validate-pr-linkage.yml
adr/: 0001-project-scope-and-principles.md
architect-os/: index.html  package-lock.json  package.json
configs/judges/: registry.yaml
configs/patterns/: tone_patterns.yaml
configs/pipeline/: hallucination.yaml  hallucination_l2_only.yaml  hallucination_legacy.yaml  hallucination_pipeline.yaml
configs/policies/: baseline_promotion.yaml  drift.yaml
configs/properties/: property_config.yaml  property_config_final.yaml
configs/retrieval/: knowledge_base.json  retrieval_config.yaml
configs/rules/: chat_quality_v1.yaml
configs/runspecs/: nightly_10k.yaml  pr_gate.yaml
datasets/benchmarks/: README.md
datasets/deterministic/: _index.json  correctness_proxy_v1.jsonl  math_basic_v1.jsonl
datasets/golden/: _index.json  dataset.yaml  v1.jsonl
datasets/math_basic/: dataset.yaml
docs/: API.md  ARCHITECTURE.md  DETERMINISTIC_JUDGE.md  DEV_GUIDE.md  EPICS.md  GETTING_STARTED.md  GOLDEN_DATASET.md  Platform_capability.md  README.md  RUNBOOK.md  architecture-decision-records.md  architecture.md  capability-map.md  configuration.md  container-architecture.md  evaluation-lifecycle.md  execution-model.md  governance_contracts.md  platform-maturity-model.md  platform-vision.md  release-process.md  roadmap.md  rule_roadmap.md  security-scanning.md  wave5_learnings_industry_practices.md
docs/adr/: 0001-use-madr-4-for-adrs.md  0002-four-layer-cascade-architecture.md  0003-two-gate-deterministic-llm-architecture.md  0004-28-properties-organised-into-6-categories.md  0005-sentence-and-response-as-dual-evaluation-units.md  0006-config-driven-pipeline-via-yaml.md  0007-deploy-l1-l2-l3-defer-l4-l5.md  0008-dataset-governance-validate-register-pin.md  0009-immutable-hashed-rbac-golden-baseline.md  0010-diff-engine-with-flip-tracking.md  0011-three-way-ci-gate.md  0012-standard-artifact-triplet.md  0013-ragtruth-50-fixed-benchmark.md  0014-spacy-sentence-splitting.md  0015-flat-keys-in-metrics-json.md  0016-embed-sentence-detail-in-judgments-jsonl.md  0017-l1-rules-substring-plus-structural-checks.md  0018-l2-multi-pass-knowledge-graph-extraction.md  0019-l2-extraction-model-gemini-flash.md  0020-l2-flag-wins-ensemble-aggregation.md  0021-l3-minicheck-primary-deberta-fallback.md  0022-l3-fact-counting-design.md  0023-cascade-resolution-rule.md  0024-l1-production-methods.md  0025-fact-table-extraction-as-registration-step.md  0026-config-driven-feature-flags.md  0027-l3-fact-counting-default-legacy-flag-gated.md  0028-ci-tests-flagged-off-paths.md  (+7 more)
examples/: batch_input_example.yaml
experiments/: benchmark_loader.py  benchmark_summary.json  exp28_claim_decomposition.py  exp28_claim_decomposition_results.json  exp28b_gemini_decomposition.py  exp28b_gemini_decomposition_results.json  exp29_l1_rules.py  exp29_l1_rules_results.json  exp29b_l1_rules_tightened.py  exp29b_l1_rules_tightened_results.json  exp30_fact_tables.json  exp30_graph_builder_debug.py  exp30_l1_l2_overlap.py  exp30_l2_comparison_results.json  exp30_stage1_extract.py  exp30_stage1_retry.py  exp30_stage2_compare.py  exp30_stage2b_graph.py  exp30_stage2b_graph_results.json  exp30_stage2c_diagnose.py  exp30_stage2c_graph_precise.py  exp30_stage2c_graph_precise_results.json  exp31_clearance_debug.py  exp31_l1_l2_overlap.py  exp31_multipass_fact_tables.json  exp31_stage1_multipass.py  exp31_stage1_retry.py  exp31_stage2_ensemble.py  exp31_stage2_ensemble_results.json  exp32_slm_comparison.py  exp32_slm_comparison_results.json  exp33_optimized_extraction.py  exp33_optimized_extraction_results.json  exp34_cyclic_extraction.py  exp35_five_graph.py  exp36_rag_five_graph.py  exp36_rag_five_graph_results.json  exp38_source_representations.py  exp38c_overlapping_stories.py  exp38d_order_test.py  (+44 more)
old/: epics_v2.yaml  project_state_03Mar2026_1518.md  project_state_23Feb2026_1853.md
reports/: eval_report.json
results/: benchmark_checkpoint.json
rubrics/: latest.yaml  registry.yaml
rules/: manifest.yaml
tests/: CONTRIBUTING.md
tools/: _batch_html_report.py  _batch_terminal.py  add_case_id_math_basic.py  apply_update_zip.sh  demo_platform.py  generate_deterministic_math_dataset.py  manage.py  migrate_math_basic_v1.py  migrate_math_basic_v1_add_case_id.py  normalize_math_basic_dataset.py  patch_math_basic_case_ids.py  preflight_pr_gate.sh  run_batch_evaluation.py  run_ragtruth50.py  validate_gate2.py  validate_platform.py  wave_a_apply.py  wave_b_apply.sh  wave_c_apply.sh  wave_d_apply.sh
(+516 files in other folders)
